--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="referrer" content="no-referrer-when-downgrade">
     <meta property="og:title" content="«Метафоричекие ассоциативные карты»">
-    <meta property="og:description" content="Онлайн мастер-класс Жанны Абрамовой">
-    <title>«Метафоричекие ассоциативные карты». Онлайн мастер-класс Жанны Абрамовой</title>
+    <meta property="og:description" content="3-дневный онлайн мастер-класс Жанны Абрамовой">
+    <title>«Метафоричекие ассоциативные карты». 3-дневный онлайн мастер-класс Жанны Абрамовой</title>
     <link rel="apple-touch-icon" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="76x76" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="120x120" href="favicon.svg">
@@ -28,6 +28,13 @@
       <div><img src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt=""></div>
     </noscript><!-- /Yandex.Metrika counter -->
     <div class="wrapper">
+      <div class="container"><br><br><br><br>
+        <ul class="general-list">
+          <li>Подводные камни при использовании метафорических ассоциативных карт, о чем вам не расскажут другие</li>
+          <li>Запросы, с которыми работают метафорические ассоциативные карты</li>
+          <li>Как использовать метафорические ассоциативные карты в самоанализе</li>
+        </ul>
+      </div>
       <footer>
         <div class="container">
           <p>ООО «ИСП»125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20<br>ИНН 7727431274, ОГРН 1197746615736</p>
