Main page typeset is done

--- a/index.html
+++ b/index.html
@@ -28,18 +28,235 @@
       <div><img src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt=""></div>
     </noscript><!-- /Yandex.Metrika counter -->
     <div class="wrapper">
-      <div class="container"><br><br><br><br>
-        <ul class="general-list">
-          <li>Подводные камни при использовании метафорических ассоциативных карт, о чем вам не расскажут другие</li>
-          <li>Запросы, с которыми работают метафорические ассоциативные карты</li>
-          <li>Как использовать метафорические ассоциативные карты в самоанализе</li>
-        </ul>
-      </div>
+      <section id="main"><img class="main-bg" src="img/backs/main.png" alt="Жанна Абрамова"/>
+        <div class="wrapper-abs wrapper-abs-main">
+          <div class="container">
+            <div class="content">
+              <div class="date">
+                <div class="date-item">
+                  <p class="date-item-text"><span>17-19</span> октября</p>
+                </div>
+                <div class="date-item">
+                  <p class="date-item-text"><span>19:00</span> МСК</p>
+                </div>
+                <div class="date-item">
+                  <p class="date-item-text">Бесплатный онлайн мастер-класс</p>
+                </div>
+              </div>
+              <p class="main-pre">Проективный метод современной психологии</p>
+              <h1 class="main-title">Метафоричекие ассоциативные карты</h1>
+              <h2 class="main-subtitle">решение самых сложных жизненных вопросов</h2>
+              <p class="main-author">Спикер<span>Жанна Абрамова</span></p><a class="button button-up" href="#Modal">Принять участие</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="video">
+        <div class="container">
+          <div class="content"><img class="general-img general-img-back" src="img/backs/video.png" alt="Размытие"/><img class="general-img general-img-singlestar" src="img/images/video-star.png" alt="Одна звезда"/>
+            <div class="video-stars"></div>
+            <div class="row">
+              <div class="col-md-10">
+                <h3 class="general-title">Почему не только психологам необходимо изучить метод современной проективной психологии МАК</h3>
+                <ul class="general-list">
+                  <li>Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.</li>
+                  <li>Экологично извлекают необходимую информацию не насилуя психику.</li>
+                  <li>Не требуют профильного психологического образования для использования.</li>
+                  <li>Подходят для выстраивания доверительных отношений и коммуникаций с детьми. Через ассоциации вы узнаете о своем ребенке больше, чем через “разговор по душам”.</li>
+                  <li>Возможность проводить самоанализ и находить ответы в сложных кризисных ситуациях.</li>
+                  <li>Возможность начать консультационную деятельность и в сжатые сроки выйти на достойный доход.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/>
+          <div class="play-button"></div>
+        </div>
+        <div class="container"><a class="button button-up" href="#Modal">Хочу узнать подробнее</a>
+        </div>
+      </section>
+      <section id="about">
+        <div class="container">
+          <div class="content"><img class="general-img general-img-back" src="img/backs/about.png" alt="Размытие"/><img class="general-img general-img-about-1" src="img/images/star-1.png" alt="Звезда"/><img class="general-img general-img-about-2" src="img/images/star-2.png" alt="Звезда"/>
+            <h3 class="general-title">Почему психологам необходимо владеть метафорическими ассоциациативными картами?</h3>
+            <div class="abouts">
+              <div class="abouts-item">
+                <p class="abouts-item-text">Данный проективный метод не содержит в себе строгих норм и ограничений, направлен на качественный анализ. </p>
+              </div>
+              <div class="abouts-item">
+                <p class="abouts-item-text">Отличительной особенностью является максимально глубокое и целостное изучение личности, выявление скрытых мотивов, внутриличностных конфликтов и переживаний.</p>
+              </div>
+              <div class="abouts-item">
+                <p class="abouts-item-text">Быстрый выход на результат, без долгих сеансов психотерапии, изматывающих клиента и  психолога.</p>
+              </div>
+              <div class="abouts-item">
+                <p class="abouts-item-text">Выстраивают крепкие и долгосрочные контакты с клиентом.</p>
+              </div>
+            </div><a class="button button-up" href="#Modal">Записаться на мастер-класс</a>
+          </div>
+        </div>
+      </section>
+      <section id="plan">
+        <div class="container">
+          <div class="content">
+            <div class="plan-stars plan-stars-1"></div><img class="general-img general-img-plan-back" src="img/backs/plan.png" alt="Размытие"/><img class="general-img general-img-plan-img" src="img/images/star-3.png" alt="Звезда"/>
+            <div class="plan-stars plan-stars-2"></div>
+            <div class="days">
+              <div class="day">
+                <h4 class="day-title">День 1</h4>
+                <ul class="general-list">
+                  <li>Основные принципы работы с метафорическими ассоциативными картами</li>
+                  <li>Почему метафорические ассоциативные карты может использовать абсолютно каждый человек</li>
+                  <li>Как использовать метафорические ассоциативные карты в самоанализе</li>
+                  <li>Запросы, с которыми работают метафорические ассоциативные карты</li>
+                  <li>Подводные камни при использовании метафорических ассоциативных карт, о чем вам не расскажут другие</li>
+                  <li><span>Практические техники работы с метафорическими ассоциативными  картами на каждый день.</span></li>
+                </ul>
+              </div>
+              <div class="day">
+                <h4 class="day-title">День 2</h4>
+                <ul class="general-list">
+                  <li>Как при работе с метафорическими ассоциативными картами начать консультационную деятельность</li>
+                  <li>Выстраивание доверительных отношений с клиентом</li>
+                  <li>Как получить стабильный доход от работы с метафорическими ассоциативными картами</li>
+                  <li>Ошибки при работе с метафорическими ассоциативными картами в консультационной деятельности</li>
+                  <li><span>Авторские техники работы с метафорическими ассоциативными картами.</span></li>
+                </ul>
+              </div>
+              <div class="day">
+                <h4 class="day-title">День 3</h4>
+                <ul class="general-list">
+                  <li>Практические демонстрационные сессии по вашим запросам</li>
+                  <li>Разбираем любую проблематику с помощью метафорических ассоциативных карт</li>
+                  <li>Вы можете оставить заявку на разбор вашего вопроса Жанной Абрамовой на вебинаре, и лично принять в нем участие</li>
+                </ul>
+              </div>
+            </div><a class="button button-up" href="#Modal">Записаться на мастер-класс</a>
+          </div>
+        </div>
+      </section>
+      <section id="author">
+        <div class="container">
+          <div class="content">
+            <div class="author-back"></div>
+            <div class="general-img general-img-author"></div>
+            <div class="row">
+              <div class="col-md-4 col-md-push-8"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
+              </div>
+              <div class="col-md-8 col-md-pull-4">
+                <div class="author-list"><img class="author-list-img" src="img/images/ellipse.png" alt="Рамка"/>
+                  <ul class="general-list general-list-author">
+                    <li><span>Более 15 лет</span> практической работы с клиентами.</li>
+                    <li><span>Более 10000</span> выпускников окончивших курсы и обучающие программы.</li>
+                    <li><span>Эксперт федеральных каналов.</span></li>
+                    <li><span>Ведущий преподаватель</span> “Института современной психологии”.</li>
+                    <li><span>Клинический психолог, гештальт-терапевт.</span></li>
+                    <li><span>Мастер</span> практической психологии и технологий осознанности.</li>
+                    <li><span>Коуч, тренер</span> обучающих и трансформационных программ.</li>
+                    <li><span>Мастер ДСТ</span> (терапия диссоциированных состояний).</li>
+                    <li><span>Процессор техник РПТ,</span> терапевт новой германской медицины.</li>
+                    <li><span>Автор</span> курсов по новой системной психологии, системной терапии, коучинга.</li>
+                  </ul>
+                </div>
+              </div>
+            </div><a class="button button-up" href="#Modal">Хочу на мастер-класс</a>
+          </div>
+        </div>
+      </section>
+      <section id="revs">
+        <div class="container">
+          <div class="content">
+            <div class="general-img general-img-revs-back"></div>
+            <h3 class="general-title">Отзывы наших студентов</h3>
+            <div class="revs-slider revs-slider-video">
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="BArWM2i_lUU" data-img="img/revs/video-1.jpg"><img src="img/revs/video-1.jpg" alt="Отзыв 1"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="AXWKp131Lc4" data-img="img/revs/video-2.jpg"><img src="img/revs/video-2.jpg" alt="Отзыв 2"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="QMaZsNzTLBw" data-img="img/revs/video-3.jpg"><img src="img/revs/video-3.jpg" alt="Отзыв 3"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="nLoNlLUlC1U" data-img="img/revs/video-4.jpg"><img src="img/revs/video-4.jpg" alt="Отзыв 4"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="B_NHWneVtJA" data-img="img/revs/video-5.jpg"><img src="img/revs/video-5.jpg" alt="Отзыв 5"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="23wuzK2PtHI" data-img="img/revs/video-6.jpg"><img src="img/revs/video-6.jpg" alt="Отзыв 6"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="bk7BXao164g" data-img="img/revs/video-7.jpg"><img src="img/revs/video-7.jpg" alt="Отзыв 7"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="5kCyZIfkSp4" data-img="img/revs/video-8.jpg"><img src="img/revs/video-8.jpg" alt="Отзыв 8"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="RsbQk2rJH1k" data-img="img/revs/video-9.jpg"><img src="img/revs/video-9.jpg" alt="Отзыв 9"></div>
+                </div>
+              </div>
+              <div>
+                <div class="video-wrapper-revs-back">
+                  <div class="video-wrapper video-wrapper-revs" data-youtube="7DeIMDUjejU" data-img="img/revs/video-10.jpg"><img src="img/revs/video-10.jpg" alt="Отзыв 10"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="revs-slider revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a><a class="text-rev-link" href="img/revs/text-9.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-9.min.jpg" alt="Отзыв 9"></a><a class="text-rev-link" href="img/revs/text-10.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-10.min.jpg" alt="Отзыв 10"></a><a class="text-rev-link" href="img/revs/text-11.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-11.min.jpg" alt="Отзыв 11"></a><a class="text-rev-link" href="img/revs/text-12.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-12.min.jpg" alt="Отзыв 12"></a><a class="text-rev-link" href="img/revs/text-13.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-13.min.jpg" alt="Отзыв 13"></a><a class="text-rev-link" href="img/revs/text-14.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-14.min.jpg" alt="Отзыв 14"></a><a class="text-rev-link" href="img/revs/text-15.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-15.min.jpg" alt="Отзыв 15"></a>
+        </div>
+      </section>
       <footer>
         <div class="container">
           <p>ООО «ИСП»125315, г. Москва, пр-кт Ленинградский, д. 68, стр. 24, эт/пом/ком 2/IV/20<br>ИНН 7727431274, ОГРН 1197746615736</p>
         </div>
       </footer>
+    </div>
+    <div class="modal" id="Modal">
+      <h3 class="general-title general-title-modal">Присоединится к мастер-классу прямо сейчас</h3>
+      <form class="form form-modal" action="" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+        <div class="email-block email-block-form">
+          <input type="hidden" value="1" name="required_fields[email]">
+          <input class="input input-mail input-mail-modal" name="Contact[email]" type="text" placeholder="Ваш email">
+        </div>
+        <button class="button button-form button-form-main" type="submit">Принять участие</button>
+        <div class="clearfix"></div>
+        <p class="alert-message"></p>
+        <div class="checking checking-modal">
+          <input class="check" type="checkbox" id="check-m">
+          <label class="check-label" for="check-m">Я согласен с <a href="https://mastervision.su/privacy" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+        </div>
+        <div style="display: none;">
+          <div style="display: none;">
+            <input type="hidden" value="" name="Contact[id_newsletter]">
+          </div><!-- API код канала рекламы -->
+          <input type="hidden" value="0" name="Contact[id_advertising_channel_page]">
+          <input type="hidden" name="formId" value="">
+          <input type="hidden" name="formVc" value="">
+          <input type="hidden" name="_aid" value="">
+          <input type="hidden" name="_vcaid" value="">
+        </div>
+      </form>
     </div>
     <script src="js/libs.min.js"></script>
     <script src="js/scripts.min.js"></script>
