--- a/index.html
+++ b/index.html
@@ -28,33 +28,35 @@
       <div><img src="https://mc.yandex.ru/watch/35450015" style="position:absolute; left:-9999px;" alt=""></div>
     </noscript><!-- /Yandex.Metrika counter -->
     <div class="wrapper">
-      <section id="main"><img class="main-bg" src="img/backs/main.png" alt="Жанна Абрамова"/>
-        <div class="wrapper-abs wrapper-abs-main">
-          <div class="container">
-            <div class="content">
-              <div class="date">
-                <div class="date-item">
-                  <p class="date-item-text"><span>17-19</span> октября</p>
-                </div>
-                <div class="date-item">
-                  <p class="date-item-text"><span>19:00</span> МСК</p>
-                </div>
-                <div class="date-item">
-                  <p class="date-item-text">Бесплатный онлайн мастер-класс</p>
-                </div>
+      <section id="main">
+        <div class="container">
+          <div class="content">
+            <div class="general-img general-img-main-1"></div>
+            <div class="general-img general-img-main-2"></div>
+            <div class="date">
+              <div class="date-item">
+                <p class="date-item-text"><span>17-19</span> октября</p>
               </div>
-              <p class="main-pre">Проективный метод современной психологии</p>
-              <h1 class="main-title">Метафоричекие ассоциативные карты</h1>
-              <h2 class="main-subtitle">решение самых сложных жизненных вопросов</h2>
-              <p class="main-author">Спикер<span>Жанна Абрамова</span></p><a class="button button-up" href="#Modal">Принять участие</a>
+              <div class="date-item">
+                <p class="date-item-text"><span>19:00</span> МСК</p>
+              </div>
+              <div class="date-item">
+                <p class="date-item-text">Бесплатный онлайн <br>мастер-класс</p>
+              </div>
             </div>
+            <p class="main-pre">Проективный метод современной психологии</p>
+            <h1 class="main-title">Метафоричекие ассоциативные карты</h1>
+            <h2 class="main-subtitle">решение самых сложных жизненных вопросов</h2>
+            <p class="main-author">Спикер<span>Жанна Абрамова</span></p><a class="button button-up" href="#Modal">Принять участие</a>
           </div>
         </div>
       </section>
       <section id="video">
         <div class="container">
-          <div class="content"><img class="general-img general-img-back" src="img/backs/video.png" alt="Размытие"/><img class="general-img general-img-singlestar" src="img/images/video-star.png" alt="Одна звезда"/>
-            <div class="video-stars"></div>
+          <div class="content">
+            <div class="general-img general-img-back"></div>
+            <div class="general-im general-img-singlestar"></div>
+            <div class="general-img general-img-video-stars"></div>
             <div class="row">
               <div class="col-md-10">
                 <h3 class="general-title">Почему не только психологам необходимо изучить метод современной проективной психологии МАК</h3>
@@ -70,8 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/>
-          <div class="play-button"></div>
+        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/><a class="play-button" href="#!"></a>
         </div>
         <div class="container"><a class="button button-up" href="#Modal">Хочу узнать подробнее</a>
         </div>
