--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       <section id="video">
         <div class="container">
           <div class="content">
-            <div class="general-img general-img-back"></div>
-            <div class="general-im general-img-singlestar"></div>
+            <div class="general-img general-img-video-back"></div>
+            <div class="general-im general-img-video-singlestar"></div>
             <div class="general-img general-img-video-stars"></div>
             <div class="row">
-              <div class="col-md-10">
+              <div class="col-md-9">
                 <h3 class="general-title">Почему не только психологам необходимо изучить метод современной проективной психологии МАК</h3>
                 <ul class="general-list">
                   <li>Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.</li>
@@ -72,14 +72,17 @@
             </div>
           </div>
         </div>
-        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/><a class="play-button" href="#!"></a>
+        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/><a class="play-button" href="javascript:void(0);"></a>
         </div>
         <div class="container"><a class="button button-up" href="#Modal">Хочу узнать подробнее</a>
         </div>
       </section>
       <section id="about">
         <div class="container">
-          <div class="content"><img class="general-img general-img-back" src="img/backs/about.png" alt="Размытие"/><img class="general-img general-img-about-1" src="img/images/star-1.png" alt="Звезда"/><img class="general-img general-img-about-2" src="img/images/star-2.png" alt="Звезда"/>
+          <div class="content">
+            <div class="general-img general-img-about-back"></div>
+            <div class="general-img general-img-about-1"></div>
+            <div class="general-img general-img-about-2"></div>
             <h3 class="general-title">Почему психологам необходимо владеть метафорическими ассоциациативными картами?</h3>
             <div class="abouts">
               <div class="abouts-item">
@@ -101,8 +104,11 @@
       <section id="plan">
         <div class="container">
           <div class="content">
-            <div class="plan-stars plan-stars-1"></div><img class="general-img general-img-plan-back" src="img/backs/plan.png" alt="Размытие"/><img class="general-img general-img-plan-img" src="img/images/star-3.png" alt="Звезда"/>
-            <div class="plan-stars plan-stars-2"></div>
+            <div class="general-img general-img-plan-stars-1"></div>
+            <div class="general-img general-img-plan-back"></div>
+            <div class="general-img general-img-plan-1"></div>
+            <div class="general-img general-img-plan-stars-2"></div>
+            <h3 class="general-title">Что ждет Вас на мастер-классе?</h3>
             <div class="days">
               <div class="day">
                 <h4 class="day-title">День 1</h4>
@@ -140,13 +146,14 @@
       <section id="author">
         <div class="container">
           <div class="content">
-            <div class="author-back"></div>
+            <div class="general-img general-img-author-back"></div>
             <div class="general-img general-img-author"></div>
+            <h3 class="general-title">Жанна Абрамова</h3>
             <div class="row">
               <div class="col-md-4 col-md-push-8"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
               </div>
               <div class="col-md-8 col-md-pull-4">
-                <div class="author-list"><img class="author-list-img" src="img/images/ellipse.png" alt="Рамка"/>
+                <div class="author-info"><img class="author-info-img" src="img/images/ellipse.png" alt="Рамка"/>
                   <ul class="general-list general-list-author">
                     <li><span>Более 15 лет</span> практической работы с клиентами.</li>
                     <li><span>Более 10000</span> выпускников окончивших курсы и обучающие программы.</li>
@@ -170,61 +177,61 @@
           <div class="content">
             <div class="general-img general-img-revs-back"></div>
             <h3 class="general-title">Отзывы наших студентов</h3>
-            <div class="revs-slider revs-slider-video">
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="BArWM2i_lUU" data-img="img/revs/video-1.jpg"><img src="img/revs/video-1.jpg" alt="Отзыв 1"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="AXWKp131Lc4" data-img="img/revs/video-2.jpg"><img src="img/revs/video-2.jpg" alt="Отзыв 2"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="QMaZsNzTLBw" data-img="img/revs/video-3.jpg"><img src="img/revs/video-3.jpg" alt="Отзыв 3"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="nLoNlLUlC1U" data-img="img/revs/video-4.jpg"><img src="img/revs/video-4.jpg" alt="Отзыв 4"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="B_NHWneVtJA" data-img="img/revs/video-5.jpg"><img src="img/revs/video-5.jpg" alt="Отзыв 5"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="23wuzK2PtHI" data-img="img/revs/video-6.jpg"><img src="img/revs/video-6.jpg" alt="Отзыв 6"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="bk7BXao164g" data-img="img/revs/video-7.jpg"><img src="img/revs/video-7.jpg" alt="Отзыв 7"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="5kCyZIfkSp4" data-img="img/revs/video-8.jpg"><img src="img/revs/video-8.jpg" alt="Отзыв 8"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="RsbQk2rJH1k" data-img="img/revs/video-9.jpg"><img src="img/revs/video-9.jpg" alt="Отзыв 9"></div>
-                </div>
-              </div>
-              <div>
-                <div class="video-wrapper-revs-back">
-                  <div class="video-wrapper video-wrapper-revs" data-youtube="7DeIMDUjejU" data-img="img/revs/video-10.jpg"><img src="img/revs/video-10.jpg" alt="Отзыв 10"></div>
-                </div>
-              </div>
+            <div class="revs-slider revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a><a class="text-rev-link" href="img/revs/text-9.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-9.min.jpg" alt="Отзыв 9"></a><a class="text-rev-link" href="img/revs/text-10.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-10.min.jpg" alt="Отзыв 10"></a><a class="text-rev-link" href="img/revs/text-11.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-11.min.jpg" alt="Отзыв 11"></a><a class="text-rev-link" href="img/revs/text-12.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-12.min.jpg" alt="Отзыв 12"></a><a class="text-rev-link" href="img/revs/text-13.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-13.min.jpg" alt="Отзыв 13"></a><a class="text-rev-link" href="img/revs/text-14.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-14.min.jpg" alt="Отзыв 14"></a><a class="text-rev-link" href="img/revs/text-15.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-15.min.jpg" alt="Отзыв 15"></a>
             </div>
           </div>
         </div>
-        <div class="revs-slider revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a><a class="text-rev-link" href="img/revs/text-9.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-9.min.jpg" alt="Отзыв 9"></a><a class="text-rev-link" href="img/revs/text-10.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-10.min.jpg" alt="Отзыв 10"></a><a class="text-rev-link" href="img/revs/text-11.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-11.min.jpg" alt="Отзыв 11"></a><a class="text-rev-link" href="img/revs/text-12.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-12.min.jpg" alt="Отзыв 12"></a><a class="text-rev-link" href="img/revs/text-13.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-13.min.jpg" alt="Отзыв 13"></a><a class="text-rev-link" href="img/revs/text-14.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-14.min.jpg" alt="Отзыв 14"></a><a class="text-rev-link" href="img/revs/text-15.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-15.min.jpg" alt="Отзыв 15"></a>
+        <div class="revs-slider revs-slider-video">
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="BArWM2i_lUU" data-img="img/revs/video-1.jpg"><img src="img/revs/video-1.jpg" alt="Отзыв 1"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="AXWKp131Lc4" data-img="img/revs/video-2.jpg"><img src="img/revs/video-2.jpg" alt="Отзыв 2"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="QMaZsNzTLBw" data-img="img/revs/video-3.jpg"><img src="img/revs/video-3.jpg" alt="Отзыв 3"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="nLoNlLUlC1U" data-img="img/revs/video-4.jpg"><img src="img/revs/video-4.jpg" alt="Отзыв 4"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="B_NHWneVtJA" data-img="img/revs/video-5.jpg"><img src="img/revs/video-5.jpg" alt="Отзыв 5"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="23wuzK2PtHI" data-img="img/revs/video-6.jpg"><img src="img/revs/video-6.jpg" alt="Отзыв 6"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="bk7BXao164g" data-img="img/revs/video-7.jpg"><img src="img/revs/video-7.jpg" alt="Отзыв 7"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="5kCyZIfkSp4" data-img="img/revs/video-8.jpg"><img src="img/revs/video-8.jpg" alt="Отзыв 8"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="RsbQk2rJH1k" data-img="img/revs/video-9.jpg"><img src="img/revs/video-9.jpg" alt="Отзыв 9"></div>
+            </div>
+          </div>
+          <div>
+            <div class="video-wrapper-revs-back">
+              <div class="video-wrapper video-wrapper-revs" data-youtube="7DeIMDUjejU" data-img="img/revs/video-10.jpg"><img src="img/revs/video-10.jpg" alt="Отзыв 10"></div>
+            </div>
+          </div>
         </div>
       </section>
       <footer>
@@ -234,7 +241,7 @@
       </footer>
     </div>
     <div class="modal" id="Modal">
-      <h3 class="general-title general-title-modal">Присоединится к мастер-классу прямо сейчас</h3>
+      <h3 class="general-title general-title-modal">Присоедяйтесь к мастер-классу прямо сейчас</h3>
       <form class="form form-modal" action="" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
         <div class="email-block email-block-form">
           <input type="hidden" value="1" name="required_fields[email]">
@@ -245,7 +252,7 @@
         <p class="alert-message"></p>
         <div class="checking checking-modal">
           <input class="check" type="checkbox" id="check-m">
-          <label class="check-label" for="check-m">Я согласен с <a href="https://mastervision.su/privacy" target="_blank">условиями обработки</a> персональных данных по 152 - Ф3</label>
+          <label class="check-label" for="check-m">Я согласен с <a href="https://iomp.ru/privacy" target="_blank">условиями обработки</a> персональных данных по&nbsp;152&nbsp;-&nbsp;Ф3</label>
         </div>
         <div style="display: none;">
           <div style="display: none;">
