--- a/confirm/index.html
+++ b/confirm/index.html
@@ -8,13 +8,13 @@
     <meta property="og:title" content="«Метафоричекие ассоциативные карты»">
     <meta property="og:description" content="3-дневный онлайн мастер-класс Жанны Абрамовой">
     <title>«Метафоричекие ассоциативные карты». 3-дневный онлайн мастер-класс Жанны Абрамовой</title>
-    <link rel="apple-touch-icon" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon.svg">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="apple-touch-icon" href="../favicon.svg">
+    <link rel="apple-touch-icon" sizes="76x76" href="../favicon.svg">
+    <link rel="apple-touch-icon" sizes="120x120" href="../favicon.svg">
+    <link rel="apple-touch-icon" sizes="152x152" href="../favicon.svg">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../favicon.png">
+    <link rel="stylesheet" href="../css/styles.min.css">
     <!-- AutoWebOffice counter -->
     <script type="text/javascript">if (awoUtmData === undefined) {var awoUtmData = awoUtmData || {};awoUtmData['subdomain'] = 'iomp';(function() {var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;d.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'iomp.autoweboffice.ru/js/utm.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(d, s);})();}</script><!-- /AutoWebOffice counter -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -72,7 +72,7 @@
             </div>
           </div>
         </div>
-        <div class="video-content"><img class="video-content-img" src="img/images/video.png" alt="Видео"/><a class="play-button" href="javascript:void(0);"></a>
+        <div class="video-content"><img class="video-content-img" src="../img/images/video.png" alt="Видео"/><a class="play-button" href="javascript:void(0);"></a>
         </div>
         <div class="container"><a class="button button-up" href="#Modal">Хочу узнать подробнее</a>
         </div>
@@ -150,10 +150,10 @@
             <div class="general-img general-img-author"></div>
             <h3 class="general-title">Жанна Абрамова</h3>
             <div class="row">
-              <div class="col-md-4 col-md-push-8"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
+              <div class="col-md-4 col-md-push-8"><img class="author-img" src="../img/images/janna.png" alt="Жанна Абрамова"/>
               </div>
               <div class="col-md-8 col-md-pull-4">
-                <div class="author-info"><img class="author-info-img" src="img/images/ellipse.png" alt="Рамка"/>
+                <div class="author-info"><img class="author-info-img" src="../img/images/ellipse.png" alt="Рамка"/>
                   <ul class="general-list general-list-author">
                     <li><span>Более 15 лет</span> практической работы с клиентами.</li>
                     <li><span>Более 10000</span> выпускников окончивших курсы и обучающие программы.</li>
@@ -177,59 +177,59 @@
           <div class="content">
             <div class="general-img general-img-revs-back"></div>
             <h3 class="general-title">Отзывы наших студентов</h3>
-            <div class="revs-slider revs-slider-text"><a class="text-rev-link" href="img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-8.min.jpg" alt="Отзыв 8"></a><a class="text-rev-link" href="img/revs/text-9.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-9.min.jpg" alt="Отзыв 9"></a><a class="text-rev-link" href="img/revs/text-10.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-10.min.jpg" alt="Отзыв 10"></a><a class="text-rev-link" href="img/revs/text-11.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-11.min.jpg" alt="Отзыв 11"></a><a class="text-rev-link" href="img/revs/text-12.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-12.min.jpg" alt="Отзыв 12"></a><a class="text-rev-link" href="img/revs/text-13.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-13.min.jpg" alt="Отзыв 13"></a><a class="text-rev-link" href="img/revs/text-14.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-14.min.jpg" alt="Отзыв 14"></a><a class="text-rev-link" href="img/revs/text-15.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="img/revs/text-15.min.jpg" alt="Отзыв 15"></a>
+            <div class="revs-slider revs-slider-text"><a class="text-rev-link" href="../img/revs/text-1.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-1.min.jpg" alt="Отзыв 1"></a><a class="text-rev-link" href="../img/revs/text-2.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-2.min.jpg" alt="Отзыв 2"></a><a class="text-rev-link" href="../img/revs/text-3.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-3.min.jpg" alt="Отзыв 3"></a><a class="text-rev-link" href="../img/revs/text-4.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-4.min.jpg" alt="Отзыв 4"></a><a class="text-rev-link" href="../img/revs/text-5.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-5.min.jpg" alt="Отзыв 5"></a><a class="text-rev-link" href="../img/revs/text-6.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-6.min.jpg" alt="Отзыв 6"></a><a class="text-rev-link" href="../img/revs/text-7.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-7.min.jpg" alt="Отзыв 7"></a><a class="text-rev-link" href="../img/revs/text-8.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-8.min.jpg" alt="Отзыв 8"></a><a class="text-rev-link" href="../img/revs/text-9.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-9.min.jpg" alt="Отзыв 9"></a><a class="text-rev-link" href="../img/revs/text-10.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-10.min.jpg" alt="Отзыв 10"></a><a class="text-rev-link" href="../img/revs/text-11.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-11.min.jpg" alt="Отзыв 11"></a><a class="text-rev-link" href="../img/revs/text-12.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-12.min.jpg" alt="Отзыв 12"></a><a class="text-rev-link" href="../img/revs/text-13.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-13.min.jpg" alt="Отзыв 13"></a><a class="text-rev-link" href="../img/revs/text-14.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-14.min.jpg" alt="Отзыв 14"></a><a class="text-rev-link" href="../img/revs/text-15.jpg" data-fancybox="text-revs"><img class="text-rev-img" src="../img/revs/text-15.min.jpg" alt="Отзыв 15"></a>
             </div>
           </div>
         </div>
         <div class="revs-slider revs-slider-video">
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="BArWM2i_lUU" data-img="img/revs/video-1.jpg"><img src="img/revs/video-1.jpg" alt="Отзыв 1"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="BArWM2i_lUU" data-img="../img/revs/video-1.jpg"><img src="../img/revs/video-1.jpg" alt="Отзыв 1"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="AXWKp131Lc4" data-img="img/revs/video-2.jpg"><img src="img/revs/video-2.jpg" alt="Отзыв 2"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="AXWKp131Lc4" data-img="../img/revs/video-2.jpg"><img src="../img/revs/video-2.jpg" alt="Отзыв 2"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="QMaZsNzTLBw" data-img="img/revs/video-3.jpg"><img src="img/revs/video-3.jpg" alt="Отзыв 3"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="QMaZsNzTLBw" data-img="../img/revs/video-3.jpg"><img src="../img/revs/video-3.jpg" alt="Отзыв 3"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="nLoNlLUlC1U" data-img="img/revs/video-4.jpg"><img src="img/revs/video-4.jpg" alt="Отзыв 4"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="nLoNlLUlC1U" data-img="../img/revs/video-4.jpg"><img src="../img/revs/video-4.jpg" alt="Отзыв 4"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="B_NHWneVtJA" data-img="img/revs/video-5.jpg"><img src="img/revs/video-5.jpg" alt="Отзыв 5"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="B_NHWneVtJA" data-img="../img/revs/video-5.jpg"><img src="../img/revs/video-5.jpg" alt="Отзыв 5"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="23wuzK2PtHI" data-img="img/revs/video-6.jpg"><img src="img/revs/video-6.jpg" alt="Отзыв 6"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="23wuzK2PtHI" data-img="../img/revs/video-6.jpg"><img src="../img/revs/video-6.jpg" alt="Отзыв 6"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="bk7BXao164g" data-img="img/revs/video-7.jpg"><img src="img/revs/video-7.jpg" alt="Отзыв 7"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="bk7BXao164g" data-img="../img/revs/video-7.jpg"><img src="../img/revs/video-7.jpg" alt="Отзыв 7"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="5kCyZIfkSp4" data-img="img/revs/video-8.jpg"><img src="img/revs/video-8.jpg" alt="Отзыв 8"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="5kCyZIfkSp4" data-img="../img/revs/video-8.jpg"><img src="../img/revs/video-8.jpg" alt="Отзыв 8"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="RsbQk2rJH1k" data-img="img/revs/video-9.jpg"><img src="img/revs/video-9.jpg" alt="Отзыв 9"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="RsbQk2rJH1k" data-img="../img/revs/video-9.jpg"><img src="../img/revs/video-9.jpg" alt="Отзыв 9"></div>
             </div>
           </div>
           <div>
             <div class="video-wrapper-revs-back">
-              <div class="video-wrapper video-wrapper-revs" data-youtube="7DeIMDUjejU" data-img="img/revs/video-10.jpg"><img src="img/revs/video-10.jpg" alt="Отзыв 10"></div>
+              <div class="video-wrapper video-wrapper-revs" data-youtube="7DeIMDUjejU" data-img="../img/revs/video-10.jpg"><img src="../img/revs/video-10.jpg" alt="Отзыв 10"></div>
             </div>
           </div>
         </div>
@@ -266,7 +266,7 @@
         </div>
       </form>
     </div>
-    <script src="js/libs.min.js"></script>
-    <script src="js/scripts.min.js"></script>
+    <script src="../js/libs.min.js"></script>
+    <script src="../js/scripts.min.js"></script>
   </body>
 </html>
