Adaptive keeping contnue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="general-img general-img-video-stars"></div>
             <h3 class="general-title general-title-video">Почему не только психологам необходимо изучить метод современной проективной психологии МАК</h3>
             <div class="row">
-              <div class="col-md-9">
+              <div class="col-md-9 col-sm-9">
                 <ul class="general-list">
                   <li>Подходят для решения острых, сложных на первый взгляд нерешаемых вопросов в сфере отношений, финансов и предназначения.</li>
                   <li>Экологично извлекают необходимую информацию не насилуя психику.</li>
@@ -148,9 +148,10 @@
           <div class="content">
             <div class="general-img general-img-author-back"></div>
             <div class="general-img general-img-author"></div>
-            <h3 class="general-title">Жанна Абрамова</h3>
+            <h3 class="general-title general-title-dt">Жанна Абрамова</h3>
             <div class="row">
-              <div class="col-md-4 col-md-push-8"><img class="author-img" src="img/images/janna.png" alt="Жанна Абрамова"/>
+              <div class="col-md-4 col-md-push-8"><img class="author-img author-img-dt" src="img/images/janna.png" alt="Жанна Абрамова"/><img class="author-img author-img-mob" src="img/images/janna-min.png" alt="Жанна Абрамова"/>
+                <h3 class="general-title general-title-mob">Жанна <span>Абрамова</span></h3>
               </div>
               <div class="col-md-8 col-md-pull-4">
                 <div class="author-info"><img class="author-info-img" src="img/images/ellipse.png" alt="Рамка"/>
@@ -168,7 +169,7 @@
                   </ul>
                 </div>
               </div>
-            </div><a class="button button-up" href="#Modal">Хочу на мастер-класс</a>
+            </div><a class="button button-up button-author" href="#Modal">Хочу на мастер-класс</a>
           </div>
         </div>
       </section>
