Main page adaptive finalling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="referrer" content="no-referrer-when-downgrade">
+    <meta property="og:url" content="https://abramova.iomp.online/pmomp-mak-webinar/">
     <meta property="og:title" content="«Метафоричекие ассоциативные карты»">
     <meta property="og:description" content="3-дневный онлайн мастер-класс Жанны Абрамовой">
     <title>«Метафоричекие ассоциативные карты». 3-дневный онлайн мастер-класс Жанны Абрамовой</title>
@@ -83,7 +84,7 @@
             <div class="general-img general-img-about-back"></div>
             <div class="general-img general-img-about-1"></div>
             <div class="general-img general-img-about-2"></div>
-            <h3 class="general-title">Почему психологам необходимо владеть метафорическими ассоциациативными картами?</h3>
+            <h3 class="general-title general-title-about">Почему психологам необходимо владеть метафорическими ассоциациативными картами?</h3>
             <div class="abouts">
               <div class="abouts-item">
                 <p class="abouts-item-text">Данный проективный метод не содержит в себе строгих норм и ограничений, направлен на качественный анализ. </p>
@@ -132,6 +133,8 @@
                 </ul>
               </div>
               <div class="day">
+                <div class="general-img general-img-plan-1 general-img-plan-1-day"></div>
+                <div class="general-img general-img-plan-2 general-img-plan-2-day"></div>
                 <h4 class="day-title">День 3</h4>
                 <ul class="general-list">
                   <li>Практические демонстрационные сессии по вашим запросам</li>
@@ -139,7 +142,7 @@
                   <li>Вы можете оставить заявку на разбор вашего вопроса Жанной Абрамовой на вебинаре, и лично принять в нем участие</li>
                 </ul>
               </div>
-            </div><a class="button button-up" href="#Modal">Записаться на мастер-класс</a>
+            </div><a class="button button-up" href="#Modal">Записаться на&nbsp;мастер-класс</a>
           </div>
         </div>
       </section>
@@ -243,7 +246,7 @@
     </div>
     <div class="modal" id="Modal">
       <h3 class="general-title general-title-modal">Присоедяйтесь к мастер-классу прямо сейчас</h3>
-      <form class="form form-modal" action="" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+      <form class="form form-modal" action="https://shop.iomp.ru/?r=personal/newsletter/sub/add&id=33401&lg=ru&Contact[id_newsletter]=477" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
         <div class="email-block email-block-form">
           <input type="hidden" value="1" name="required_fields[email]">
           <input class="input input-mail input-mail-modal" name="Contact[email]" type="text" placeholder="Ваш email">
@@ -257,11 +260,11 @@
         </div>
         <div style="display: none;">
           <div style="display: none;">
-            <input type="hidden" value="" name="Contact[id_newsletter]">
+            <input type="hidden" value="477" name="Contact[id_newsletter]">
           </div><!-- API код канала рекламы -->
           <input type="hidden" value="0" name="Contact[id_advertising_channel_page]">
-          <input type="hidden" name="formId" value="">
-          <input type="hidden" name="formVc" value="">
+          <input type="hidden" name="formId" value="221">
+          <input type="hidden" name="formVc" value="3296406014">
           <input type="hidden" name="_aid" value="">
           <input type="hidden" name="_vcaid" value="">
         </div>
