--- a/promo/index.html
+++ b/promo/index.html
@@ -36,7 +36,7 @@
               <div class="col-md-8">
                 <h1 class="main-title">У меня к вам просьба, прямо сейчас кликнуть на кнопку и перейти в Telegram-канал</h1>
                 <p class="main-text">В нем вы сможете получать информацию о методах современной психологии. А также в канале вам будут приходить напоминания о старте мастер-класса, на который вы зарегистрировались, и ссылки на вебинарные комнаты.</p>
-                <p class="main-text"><span>Присоединяйтесь</span></p><a class="button button-main" href="https://t.me/+CAwuyvO6BXVmNzli"><img src="../img/icons/tg.png" alt="Telegram"/> Присоединиться</a>
+                <p class="main-text"><span>Присоединяйтесь</span></p><a class="button button-main" href="https://t.me/+hDZNaECfJ542Mjgy"><img src="../img/icons/tg.png" alt="Telegram"/> Присоединиться</a>
                 <p class="main-text">Обязательно оставляйте <span>включенным уведомления,</span> чтобы не&nbsp;пропустить начало.</p>
               </div>
             </div>
