Main page is adapted

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <div class="general-img general-img-main-2"></div>
             <div class="date">
               <div class="date-item">
-                <p class="date-item-text"><span>17-19</span> октября</p>
+                <p class="date-item-text">17-19 <span>октября</span></p>
               </div>
               <div class="date-item">
-                <p class="date-item-text"><span>19:00</span> МСК</p>
+                <p class="date-item-text">19:00 <span>МСК</span></p>
               </div>
               <div class="date-item">
-                <p class="date-item-text">Бесплатный онлайн <br>мастер-класс</p>
+                <p class="date-item-text"><span> Бесплатный онлайн <br>мастер-класс</span></p>
               </div>
             </div>
             <p class="main-pre">Проективный метод современной психологии</p>
